--- a/MangoMovie/Views/Shared/_Layout.cshtml
+++ b/MangoMovie/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - 我的 ASP.NET 应用程序</p>
+            <p>&copy; @DateTime.Now.Year - JasonMeng's Website</p>
         </footer>
     </div>
 
