--- a/MangoMovie/Views/Shared/_Layout.cshtml
+++ b/MangoMovie/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="no-referrer" />
+
     <title>@ViewBag.Title - MangoMovie</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
